--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 }
 
 .bg {
-    margin: 0 auto;
+    /* margin: 0 auto; */
     background-image: url(../assets/Hero-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -86,7 +86,7 @@
     margin-bottom: 32px;
 }
 
-.heading-sec-2 {
+.heading-sec-2, .ins-heading {
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
     font-size: 32px;
@@ -124,6 +124,8 @@
     letter-spacing: 0%;
     text-align: left;
     opacity: 0.7;
+    margin-top: 5px;
+    margin-bottom: 20px;
 
 }
 
@@ -141,4 +143,28 @@
     letter-spacing: 0%;
     text-align: center;
 
+}
+
+
+iframe {
+    border-radius: 16px;
+
+}
+
+.vdo {
+    padding: 50px;
+    margin-top: 75px;
+    margin-right: 150px;
+    margin-left: 150px;
+    display: flex;
+    justify-content: center;
+
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.2);
+    border-radius: 16px;
+
+}
+.ins-heading{
+    margin-top: 80px;
+    margin-bottom: 24px;
 }
