--- a/styles/style.css
+++ b/styles/style.css
@@ -63,6 +63,7 @@
     line-height: 23px;
     letter-spacing: 0%;
     text-align: center;
+    cursor: pointer;
 }
 
 /* second section  */
@@ -145,6 +146,7 @@
     line-height: 23px;
     letter-spacing: 0%;
     text-align: center;
+    cursor: pointer;
 
 }
 
@@ -249,4 +251,73 @@ iframe {
     margin-left: 150px;
     padding: 10px;
     text-align: left;
+}
+
+.input-box {
+    width: 400px;
+    height: 45px;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 8px;
+
+    background: rgb(255, 255, 255);
+}
+
+.search-btn {
+    width: 80px;
+    height: 45px;
+    border-radius: 8px;
+    background: rgb(255, 255, 255);
+    cursor: pointer;
+}
+
+.support-heading {
+    color: rgb(255, 255, 255);
+    font-family: Azeret Mono;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: center;
+    padding-top: 5px;
+
+}
+
+.support-para {
+    color: rgb(255, 255, 255);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7;
+}
+
+.container {
+    background-image: url(/assets/handshake.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 16px;
+
+    margin-top: 75px;
+    margin-right: 150px;
+    margin-left: 150px;
+    padding: 80px;
+    text-align: center;
+
+    background: rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2), url(Email);
+}
+
+.footer-list {
+    list-style: none;
+    display: flex;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 20px 0;
 }
