footer section re commit after deadline

--- a/styles/style.css
+++ b/styles/style.css
@@ -295,7 +295,7 @@ iframe {
 }
 
 .container {
-    background-image: url(/assets/handshake.jpg);
+    background-image: url(../assets/handshake.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
