bg section fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,11 @@
     margin: 0 auto;
 }
 
+.border{
+    border: 2px solid tomato;
+
+}
+
 .content {
     text-align: center;
     padding: 25px 220px 44px 220px;
@@ -13,7 +18,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 652px;
+    /* height: 652px; */
 }
 
 .div-content {
@@ -30,9 +35,8 @@
     line-height: 68px;
     letter-spacing: 0%;
     text-align: center;
-    width: 900px;
-    padding-left: 60px;
-
+    /* width: 900px; */
+    /* padding-left: 60px; */
 }
 
 .content-des,
